[2016-03] Update solution and implement new solver interface