@@ -1,86 +1,68 @@
 package aoc.event.year2016;
 
-import aoc.DeprecatedSolver2;
+import aoc.Solver;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 /// # [2016-03: Squares With Three Sides](https://adventofcode.com/2016/day/3)
-public class Day03 implements DeprecatedSolver2 {
+public class Day03 implements Solver<Integer, Integer> {
     
-    private final List<List<Integer>> numberLists;
+    private static final int TRIANGLE_SIDES = 3;
+    private final List<List<Integer>> lists;
     
     public Day03(String input) {
-        numberLists = parse(input);
+        lists = parse(input);
     }
     
     private static List<List<Integer>> parse(String input) {
-        final var numberLists = new ArrayList<List<Integer>>();
-        
-        for (final var line : input.lines().toList()) {
-            final var numbers = Arrays.stream(line.trim().split("\\s+"))
+        return input
+            .lines()
+            .map(String::stripLeading)
+            .map(line -> Arrays
+                .stream(line.split("\\s+"))
                 .map(Integer::parseInt)
-                .toList();
-            
-            numberLists.add(numbers);
-        }
-        
-        return numberLists;
+                .toList())
+            .toList();
     }
     
-    /// Determines whether a triangle could be formed with the given `sideLengths` or not. A triangle is
-    /// considered possible when the sum of any two sides are larger than the remaining side.
-    ///
-    /// @param sideLengths the side lengths of a triangle.
-    /// @return true if the side lengths are possible, or false otherwise.
-    private static boolean possibleTriangle(List<Integer> sideLengths) {
-        if (sideLengths.size() != 3) {
+    private static boolean isPossibleTriangle(List<Integer> sideLengths) {
+        if (sideLengths.size() != TRIANGLE_SIDES) {
             throw new IllegalArgumentException("There must be exactly 3 sides to form a triangle.");
         }
-        
-        final var side1 = sideLengths.get(0);
-        final var side2 = sideLengths.get(1);
-        final var side3 = sideLengths.get(2);
-        
+        var side1 = sideLengths.get(0);
+        var side2 = sideLengths.get(1);
+        var side3 = sideLengths.get(2);
         return (side1 + side2 > side3) &&
             (side1 + side3 > side2) &&
             (side2 + side3 > side1);
     }
-
-    /// @return the number of possible triangles.
+    
+    /// Counts the number of possible triangles with sidelengths listed horizontally.
     @Override
-    public Object partOne() {
-        var possibleTriangles = 0;
-        
-        for (final var list : numberLists) {
-            if (possibleTriangle(list)) {
-                possibleTriangles++;
-            }
-        }
-        
-        return possibleTriangles;
+    public Integer partOne() {
+        return (int) lists
+            .stream()
+            .filter(Day03::isPossibleTriangle)
+            .count();
     }
-
-    /// @return the number of possible triangles in the vertical groups.
+    
+    /// Counts the number of possible triangles with sidelengths listed vertically.
     @Override
-    public Object partTwo() {
-        var possibleTriangles = 0;
-        
-        for (var row = 0; row < numberLists.size(); row += 3) {
-            for (var column = 0; column < numberLists.getFirst().size(); column++) {
-                final var triangle = Arrays.asList(
-                    numberLists.get(row).get(column),
-                    numberLists.get(row + 1).get(column),
-                    numberLists.get(row + 2).get(column)
+    public Integer partTwo() {
+        var count = 0;
+        for (var x = 0; x < lists.size(); x += TRIANGLE_SIDES) {
+            for (var y = 0; y < lists.getFirst().size(); y++) {
+                var triangle = List.of(
+                    lists.get(x).get(y),
+                    lists.get(x + 1).get(y),
+                    lists.get(x + 2).get(y)
                 );
-                
-                if (possibleTriangle(triangle)) {
-                    possibleTriangles++;
+                if (isPossibleTriangle(triangle)) {
+                    count++;
                 }
             }
         }
-        
-        return possibleTriangles;
+        return count;
     }
 }
